demo-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo
  name: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - image: httpd
        imagePullPolicy: Always
        name: httpd
        volumeMounts:
        - name: httpd-conf
          mountPath: /usr/local/apache2/conf
      volumes:
      - name: httpd-conf
        emptyDir: {}
