nginx_deploy2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tata
  namespace: default
  labels:
    app: label2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: label2
  template:
    metadata:
      labels:
        app: label2
    spec:
      containers:
      - name: nginx
        image: hashicorp/http-echo
        args:
          - "-text=clementine"
          - "-listen=:80"
