demo-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: demo
  annotations:
    cloud.google.com/app-protocols: '{"https-port":"HTTPS"}'
spec:
  selector:
    app: demo
  ports:
  - name: https-port
    port: 443
    targetPort: 5678
