service_nginx.yml
apiVersion: v1
kind: Service
metadata:  
  name: apple-service
  annotations:
    cloud.google.com/app-protocols: '{"https-port":"HTTPS"}'
spec:
  selector:    
    app: label1
  ports:  
  - name: https-port
    port: 80
    targetPort: 80
