service_nginx2.yml
apiVersion: v1
kind: Service
metadata:  
  name: clementine-service
  annotations:
    cloud.google.com/app-protocols: '{"https-port":"HTTPS"}'
spec:
  selector:    
    app: label2
  ports:  
  - name: https-port
    port: 80
    targetPort: 80
