ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fruit-ingress
  annotations:
      nginx.ingress.kubernetes.io/app-root: /app1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /app1
        pathType: Exact
        backend:
          service:
            name: apple-service
            port: 
              number: 80
